2010-05-02  James Youngman  <jay@gnu.org>

	Silence an error about m4 quoting in the Google C++ Testing Framework.
	* .x-sc_m4_quote_check: Silence error message about insufficient
	quoting in googletest/m4/acx_pthread.m4.  We do this rather than
	fixing the quoting in order to avoid subsequent merge problems and
	spurious diffs.

	Silence a spurious error about changing old NEWS entries.	
	* cfg.mk (old_NEWS_hash): Set old_NEWS_hash to the md5sum of a
	zero-length input in order to silence a spurious error about
	changing old NEWS entries.

	Standardise on the use of "file system" rather than "filesystem".
	* docs/cssc.texi (Filenames): Spell "filesystem" as "file system",
	following the example of the POSIX standard.
	* docs/Platforms: Likewise.
	* file.cc (atomic_nfs_create): Likewise.
	* tests/admin/hardlinks.sh: Likewise.
	* tests/admin/.x-sc_file_system: Exempt the Google Unit Test code
	from this requirement, since that will make later updates hard to
	merge.
	Also exempt ChangeLog files.

	Ignore some maintainer-makefile lint complaints I don't plan to fix.
	* .x-sc_error_message_period: Avoid syntax-check errors for error
	messages ending in a full stop.  Some error messages contain more
	than one sentence.
	* .x-sc_error_message_uppercase: Avoid syntax-check errors for
	error messages starting with a capital letter.

	Fix a maintainer-makefile if-before-free lint issue.
	* bsd/sccs.c (set_prefix): Remove useless if-before-free.

	Adopt the use of the gnulib maintainer-makefile module.
	(gnulib_modules): Add maintainer-makefile.
	
	Update to GNU Free Documentation License, Version 1.3 (from 1.2).
	* docs/cssc.texi (@copying): Update from FDL 1.2 to FDL 1.3.
	* bootstrap.conf (gnulib_modules): Import module fdl.

	* docs/fdl.texi: Symlink to ../gl/doc/fdl.texi.
	* NEWS: Mention this change.

	Don't create a spurious directory.
	* bootstrap.conf (local_gl_dir): Don't create {m4_base}.  Create
	${m4_base} instead.
