@@ -82,17 +82,17 @@ admin_SOURCES = admin.cc sf-admin.cc sf-val.cc
 delta_SOURCES = delta.cc sf-delta.cc pf-del.cc
 val_SOURCES = val.cc sf-val.cc
 
-get_LDADD = libcssc.a @LIBOBJS@ 
-delta_LDADD = libcssc.a @LIBOBJS@
-admin_LDADD = libcssc.a @LIBOBJS@
-prs_LDADD = libcssc.a @LIBOBJS@
-what_LDADD = libcssc.a @LIBOBJS@
-unget_LDADD = libcssc.a @LIBOBJS@
-sact_LDADD = libcssc.a @LIBOBJS@
-cdc_LDADD = libcssc.a @LIBOBJS@
-rmdel_LDADD = libcssc.a @LIBOBJS@
-prt_LDADD = libcssc.a @LIBOBJS@
-val_LDADD = libcssc.a @LIBOBJS@
+get_LDADD = libcssc.a $(LIBOBJS) 
+delta_LDADD = libcssc.a $(LIBOBJS)
+admin_LDADD = libcssc.a $(LIBOBJS)
+prs_LDADD = libcssc.a $(LIBOBJS)
+what_LDADD = libcssc.a $(LIBOBJS)
+unget_LDADD = libcssc.a $(LIBOBJS)
+sact_LDADD = libcssc.a $(LIBOBJS)
+cdc_LDADD = libcssc.a $(LIBOBJS)
+rmdel_LDADD = libcssc.a $(LIBOBJS)
+prt_LDADD = libcssc.a $(LIBOBJS)
+val_LDADD = libcssc.a $(LIBOBJS)
 
 # $(testcode) is test code that isn't normally used.
 testcode = list.cc 
